fix background jump (#47)

--- a/styles/overrides.css
+++ b/styles/overrides.css
@@ -110,7 +110,10 @@ button[role="combobox"], input, .fake-dropdown  {
 
 body {
     background-image: url("/images/snow5.jpg");
-    background-size:cover
+    background-size:cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .text-card-foreground {
